# walkie-talkie

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dev_logs.md
crates/wt-cli/: Cargo.toml
crates/wt-cli/src/: main.rs
crates/wt-cli/tests/: e2e_spawn.rs  e2e_two_daemons.rs
crates/wt-core/: Cargo.toml
crates/wt-core/src/: auth.rs  framing.rs  harness.rs  identity.rs  lib.rs  paths.rs  store.rs  transport.rs  workspace.rs
crates/wt-core/src/services/: msg.rs
crates/wt-daemon/: Cargo.toml
crates/wt-daemon/src/: ipc.rs  lib.rs  mdns.rs  state.rs  supervisor.rs  web.rs
crates/wt-daemon/tests/: agent_bus.rs
crates/wt-proto/: Cargo.toml
crates/wt-proto/src/: ipc.rs  lib.rs  ticket.rs  token.rs  wire.rs
extension/: app.js  manifest.json  newtab.html  styles.css
scripts/: com.wt.daemon.plist  edge_cases.sh  install-daemon.sh  smoke_agents.sh  smoke_local.sh
