[workspace]
resolver = "2"
members = [
    "crates/wt-proto",
    "crates/wt-core",
    "crates/wt-daemon",
    "crates/wt-cli",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
bytes = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
iroh = "0.98"
data-encoding = "2"
rand = "0.8"
hex = "0.4"
futures-lite = "2"

wt-proto = { path = "crates/wt-proto" }
wt-core = { path = "crates/wt-core" }
wt-daemon = { path = "crates/wt-daemon" }

[profile.release]
lto = "thin"
codegen-units = 1
